--- a/archivement.html
+++ b/archivement.html
@@ -125,8 +125,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/te.jpg" class="image-popup animate-box">
-							<img src="images/she.jpg" alt="selection 2 judy">
+						<a href="images/bads.png" class="image-popup animate-box">
+							<img src="images/swimo.jpg" alt="selection 2 judy">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -136,7 +136,7 @@
 					</div>
 					<div class="fh5co-item">
 						<a href="images/take.jpg" class="image-popup animate-box">
-							<img src="images/marto.jpg" alt="Friend">
+							<img src="images/24.jpeg" alt="Friend">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -146,7 +146,7 @@
 					</div>
 					<div class="fh5co-item">
 						<a href="images/swimo2.jpg" class="image-popup animate-box">
-							<img src="images/swimo.jpg" alt="swimo">
+							<img src="images/arch 2.jpeg" alt="swimo">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -180,7 +180,7 @@
 					</div>
 					<div class="fh5co-item">
 						<a href="images/photo-collage (1).png" class="image-popup animate-box">
-							<img src="images/who.jpg" alt="Free HTML5 Website Template by FreeHTML5.co">
+							<img src="images/229.jpg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>	
@@ -190,7 +190,7 @@
 					</div>
 					<div class="fh5co-item">
 						<a href="images/photo-collage.png" class="image-popup animate-box">
-							<img src="images/m6.png" alt="Free HTML5 Website Template by FreeHTML5.co">
+							<img src="images/arch 1.jpeg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>	
