--- a/budies.html
+++ b/budies.html
@@ -117,7 +117,7 @@
 					</div>
 					
 					<div class="fh5co-item">
-						<a href="images/kh.jpg" class="image-popup animate-box">
+						<a href="images/j.jpeg" class="image-popup animate-box">
 							<img src="images/j.jpeg" alt="selection 1" title="Nice one">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -127,7 +127,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/te.jpg" class="image-popup animate-box">
+						<a href="images/she.jpg" class="image-popup animate-box">
 							<img src="images/she.jpg" alt="selection 2 judy">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -137,7 +137,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/take.jpg" class="image-popup animate-box">
+						<a href="images/marto.jpg" class="image-popup animate-box">
 							<img src="images/marto.jpg" alt="Friend">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -147,7 +147,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/swimo2.jpg" class="image-popup animate-box">
+						<a href="images/m1.jpg" class="image-popup animate-box">
 							<img src="images/m1.jpg" alt="swimo">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -160,7 +160,7 @@
 				<div class="fh5co-col-2">
 
 					<div class="fh5co-item">
-						<a href="images/n1.jpg" class="image-popup animate-box">
+						<a href="images/la.jpg" class="image-popup animate-box">
 							<img src="images/la.jpg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -170,7 +170,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/photo-collage (2).png" class="image-popup animate-box">
+						<a href="images/car.png" class="image-popup animate-box">
 							<img src="images/car.png" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -181,7 +181,7 @@
 						
 					</div>
 					<div class="fh5co-item">
-						<a href="images/photo-collage (1).png" class="image-popup animate-box">
+						<a href="images/who.jpg" class="image-popup animate-box">
 							<img src="images/who.jpg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -191,7 +191,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/photo-collage.png" class="image-popup animate-box">
+						<a href="images/m6.png" class="image-popup animate-box">
 							<img src="images/m6.png" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
