--- a/support.html
+++ b/support.html
@@ -126,8 +126,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/next.jpg" class="image-popup animate-box">
-							<img src="images/next.jpg" alt="selection 2 judy">
+						<a href="images/support.jpg" class="image-popup animate-box">
+							<img src="images/support.jpg" alt="selection 2 judy">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -190,7 +190,7 @@
 						</a>
 					</div> -->
 					<div class="fh5co-item">
-						<a href="images/photo-collage.png" class="image-popup animate-box">
+						<a href="images/m6.png" class="image-popup animate-box">
 							<img src="images/m6.png" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
