--- a/archivement.html
+++ b/archivement.html
@@ -125,7 +125,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/bads.png" class="image-popup animate-box">
+						<a href="images/swimo.jpg" class="image-popup animate-box">
 							<img src="images/swimo.jpg" alt="selection 2 judy">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -135,7 +135,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/take.jpg" class="image-popup animate-box">
+						<a href="images/24.jpeg" class="image-popup animate-box">
 							<img src="images/24.jpeg" alt="Friend">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -145,7 +145,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/swimo2.jpg" class="image-popup animate-box">
+						<a href="images/arch 2.jpeg" class="image-popup animate-box">
 							<img src="images/arch 2.jpeg" alt="swimo">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -158,7 +158,7 @@
 				<div class="fh5co-col-2">
 
 					<div class="fh5co-item">
-						<a href="images/rost 1.png" class="image-popup animate-box">
+						<a href="images/pp2.png" class="image-popup animate-box">
 							<img src="images/pp2.png" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -168,7 +168,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/photo-collage (2).png" class="image-popup animate-box">
+						<a href="images/bads.png" class="image-popup animate-box">
 							<img src="images/bads.png" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -179,7 +179,7 @@
 						
 					</div>
 					<div class="fh5co-item">
-						<a href="images/photo-collage (1).png" class="image-popup animate-box">
+						<a href="images/229.jpg" class="image-popup animate-box">
 							<img src="images/229.jpg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -189,7 +189,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/photo-collage.png" class="image-popup animate-box">
+						<a href="images/arch 1.jpeg.jpg" class="image-popup animate-box">
 							<img src="images/arch 1.jpeg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
