--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="single.html" class="transition animate-box">
+						<a href="love.html" class="transition animate-box">
 							<img src="images/7.jpeg" alt="Moringa">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -120,11 +120,11 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="single.html" class="transition animate-box">
+						<a href="random.html" class="transition animate-box">
 							<img src="images/ng.jpeg" alt="The love">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
-									<h2>Moringa School</h2>
+									<h2>Random</h2>
 								</div>
 							</div>
 						</a>
@@ -143,7 +143,7 @@
 					</div>
 					<div class="fh5co-item">
 						<a href="budies.html" class="transition animate-box">
-							<img src="images/bad.jpg" alt="Friends">
+							<img src="images/down.jpg" alt="Friends">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2>Buddies</h2>
@@ -153,8 +153,8 @@
 						
 					</div>
 					<div class="fh5co-item">
-						<a href="single.html" class="transition animate-box">
-							<img src="images/mem.jpg" alt="Memories">
+						<a href="memmories.html" class="transition animate-box">
+							<img src="images/101.jpg" alt="Memories">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2>Memories</h2>
@@ -163,7 +163,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="single.html" class="transition animate-box">
+						<a href="team.html" class="transition animate-box">
 							<img src="images/20.jpeg" alt="Team">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
