--- a/team.html
+++ b/team.html
@@ -145,8 +145,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/rockss.png" class="image-popup animate-box">
-							<img src="images/rockss.png" alt="swimo">
+						<a href="images/arch 2.jpeg" class="image-popup animate-box">
+							<img src="images/arch 2.jpeg" alt="swimo">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
