--- a/budies.html
+++ b/budies.html
@@ -137,8 +137,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/marto.jpg" class="image-popup animate-box">
-							<img src="images/marto.jpg" alt="Friend">
+						<a href="images/102.jpg" class="image-popup animate-box">
+							<img src="images/102.jpg" alt="Friend">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -170,7 +170,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/car.png" class="image-popup animate-box">
+						<a href="images/bad.jpg" class="image-popup animate-box">
 							<img src="images/bad.jpg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -181,8 +181,8 @@
 						
 					</div>
 					<div class="fh5co-item">
-						<a href="images/who.jpg" class="image-popup animate-box">
-							<img src="images/who.jpg" alt="Free HTML5 Website Template by FreeHTML5.co">
+						<a href="images/lon1.jpg" class="image-popup animate-box">
+							<img src="images/lon1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>	
@@ -191,8 +191,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/m6.png" class="image-popup animate-box">
-							<img src="images/m6.png" alt="Free HTML5 Website Template by FreeHTML5.co">
+						<a href="images/lon 1.jpg" class="image-popup animate-box">
+							<img src="images/lon 1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>	
