--- a/team.html
+++ b/team.html
@@ -116,7 +116,7 @@
 					
 					<div class="fh5co-item">
 						<a href="images/rr.jpg" class="image-popup animate-box">
-							<img src="images/down 1.jpg" alt="selection 1" title="Nice one">
+							<img src="images/ppm.jpeg" alt="selection 1" title="Nice one">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -125,7 +125,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/Publication3.jpg" class="image-popup animate-box">
+						<a   href="team.html" onclick='window.open("https://www.codingclubskenya.com/our-team");return false;' class="transition animate-box">
 							<img src="images/Publication3.jpg" alt="selection 2 judy">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -136,7 +136,7 @@
 					</div>
 					<div class="fh5co-item">
 						<a href="images/24.jpeg" class="image-popup animate-box">
-							<img src="images/21.jpeg" alt="Friend">
+							<img src="images/20.jpeg" alt="Friend">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -146,7 +146,7 @@
 					</div>
 					<div class="fh5co-item">
 						<a href="images/arch 2.jpeg" class="image-popup animate-box">
-							<img src="images/arch 2.jpeg" alt="swimo">
+							<img src="images/team.jpg" alt="swimo">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -158,8 +158,8 @@
 				<div class="fh5co-col-2">
 
 					<div class="fh5co-item">
-						<a href="images/pp2.png" class="image-popup animate-box">
-							<img src="images/hi.jpeg" alt="Free HTML5 Website Template by FreeHTML5.co">
+						<a href="images/leg 1.jpeg" class="image-popup animate-box">
+							<img src="images/leg 1.jpeg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>	
@@ -168,8 +168,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/bads.png" class="image-popup animate-box">
-							<img src="images/8.jpeg" alt="Free HTML5 Website Template by FreeHTML5.co">
+						<a href="images/ttm.jpg" class="image-popup animate-box">
+							<img src="images/ttm.jpg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>	
@@ -179,8 +179,8 @@
 						
 					</div>
 					<div class="fh5co-item">
-						<a href="images/rr3.jpg" class="image-popup animate-box">
-							<img src="images/rr3.jpg" alt="Free HTML5 Website Template by FreeHTML5.co">
+						<a href="images/team 1.jpeg" class="image-popup animate-box">
+							<img src="images/team 1.jpeg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>	
@@ -190,7 +190,7 @@
 					</div>
 					<div class="fh5co-item">
 						<a href="images/arch 1.jpeg" class="image-popup animate-box">
-							<img src="images/arch 1.jpeg" alt="Free HTML5 Website Template by FreeHTML5.co">
+							<img src="images/team.jpg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>	
