--- a/archivement.html
+++ b/archivement.html
@@ -115,7 +115,7 @@
 					</div>
 					
 					<div class="fh5co-item">
-						<a href="images/rr.jpg" class="image-popup animate-box">
+						<a href="images/down 1.jpg" class="image-popup animate-box">
 							<img src="images/down 1.jpg" alt="selection 1" title="Nice one">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -125,7 +125,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/Publication3.jpg" class="image-popup animate-box">
+						<a   href="archivement.html" onclick='window.open("https://www.codingclubskenya.com/");return false;' class="transition animate-box">
 							<img src="images/Publication3.jpg" alt="selection 2 judy">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -135,7 +135,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/24.jpeg" class="image-popup animate-box">
+						<a href="images/21.jpeg" class="image-popup animate-box">
 							<img src="images/21.jpeg" alt="Friend">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -145,11 +145,11 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/rockss.png" class="image-popup animate-box">
+						<a   href="archivement.html" onclick='window.open("https://madrocksnetworkers.netlify.app/");return false;' class="transition animate-box">
 							<img src="images/rockss.png" alt="swimo">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
-									<h2><i class="icon-search2"></i></h2>
+									<h2><i class="icon-search2"   ></i></h2>
 								</div>
 							</div>
 						</a>
@@ -158,7 +158,7 @@
 				<div class="fh5co-col-2">
 
 					<div class="fh5co-item">
-						<a href="images/pp2.png" class="image-popup animate-box">
+						<a href="images/hi.jpeg" class="image-popup animate-box">
 							<img src="images/hi.jpeg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -168,7 +168,7 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/bads.png" class="image-popup animate-box">
+						<a href="images/8.jpeg" class="image-popup animate-box">
 							<img src="images/8.jpeg" alt="Free HTML5 Website Template by FreeHTML5.co">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
